src/objects/Targeted_Product__c.object
<CustomObject>
    <fields>
        <fullName>Doctor__c</fullName>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Targeted Products</relationshipLabel>
        <relationshipName>Targeted_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <referenceTo>MSN_Product__c</referenceTo>
        <relationshipLabel>Targeted Doctors</relationshipLabel>
        <relationshipName>Targeted_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Range__c</fullName>
        <label>Target Range</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Targeted Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Targeted Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targeted Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>